--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "zoom",
+  "name": "noom",
   "version": "1.0.0",
-  "description": "Zoom Clone using NodeJS, WebRTC and Websockets",
+  "description": "Zoom Clone using NodeJS, WebRTC and Websockets.",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon"
   },
   "devDependencies": {
-    "@babel/cli": "^7.19.3",
-    "@babel/core": "^7.20.5",
-    "@babel/node": "^7.20.5",
-    "@babel/preset-env": "^7.20.2",
-    "nodemon": "^2.0.20"
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/preset-env": "^7.14.7",
+    "nodemon": "^2.0.12"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@socket.io/admin-ui": "^0.2.0",
+    "express": "^4.17.1",
+    "localtunnel": "^2.0.1",
     "pug": "^3.0.2",
-    "socket.io": "^4.5.4",
-    "ws": "^8.11.0"
+    "socket.io": "^4.1.3",
+    "ws": "^7.5.3"
   }
 }
