--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@babel/core": "^7.14.6",
     "@babel/node": "^7.14.7",
     "@babel/preset-env": "^7.14.7",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
     "@socket.io/admin-ui": "^0.2.0",
