--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@socket.io/admin-ui": "^0.2.0",
+    "bootstrap-icons": "^1.10.5",
     "express": "^4.17.1",
     "localtunnel": "^2.0.1",
     "pug": "^3.0.2",
