--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Zoom Clone using NodeJS, WebRTC and Websockets.",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "build": "next build"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
