--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Zoom Clone using NodeJS, WebRTC and Websockets.",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon",
-    "build": "next build"
+    "dev": "nodemon"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -22,6 +21,7 @@
     "localtunnel": "^2.0.1",
     "pug": "^3.0.2",
     "socket.io": "^4.1.3",
-    "ws": "^7.5.3"
+    "ws": "^7.5.3",
+    "yarn": "^1.22.19"
   }
 }
